Update ReportService.java